RESOLVED FIXED206026
Fix a tiny logging mistake in launchProcess
https://bugs.webkit.org/show_bug.cgi?id=206026
Summary Fix a tiny logging mistake in launchProcess
Tim Horton
Reported 2020-01-09 12:44:38 PST
Fix a tiny logging mistake in launchProcess
Attachments
Patch (1.42 KB, patch)
2020-01-09 12:44 PST, Tim Horton
no flags
Tim Horton
Comment 1 2020-01-09 12:44:57 PST
WebKit Commit Bot
Comment 2 2020-01-09 14:36:53 PST
Comment on attachment 387257 [details] Patch Clearing flags on attachment: 387257 Committed r254299: <https://trac.webkit.org/changeset/254299>
WebKit Commit Bot
Comment 3 2020-01-09 14:36:55 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2020-01-09 14:37:17 PST
Note You need to log in before you can comment on or make changes to this bug.