Fix a tiny logging mistake in launchProcess https://bugs.webkit.org/show_bug.cgi?id=206026

Reviewed by Wenson Hsieh.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::launchProcess):


Canonical link: https://commits.webkit.org/219148@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254299 268f45cc-cd09-0410-ab3c-d52691b4dbfc